@@ -1,6 +1,6 @@
 #############################################################################
 # Makefile for building chromium-setup
-# Generated by tmake at 23:30, 2001/05/12
+# Generated by tmake at 10:45, 2001/05/26
 #     Project: SETUP
 #    Template: app
 #############################################################################
@@ -24,7 +24,8 @@ GZIP	=	gzip -9f
 
 ####### Files
 
-HEADERS =	Audio.h \
+HEADERS =	main.h \
+		Audio.h \
 		ConfigFile.h \
 		HelpPage.h \
 		HiScoreWidget.h \
@@ -32,26 +33,25 @@ HEADERS =	Audio.h \
 		PlayList.h \
 		../src/define.h \
 		../src/Config.h \
-		../src/HiScore.h \
-		main.h
-SOURCES =	Audio.cpp \
+		../src/HiScore.h
+SOURCES =	main.cpp \
+		Audio.cpp \
 		ConfigFile.cpp \
 		HelpPage.cpp \
 		HiScoreWidget.cpp \
 		MainWidget.cpp \
 		PlayList.cpp \
 		../src/Config.cpp \
-		../src/HiScore.cpp \
-		main.cpp
-OBJECTS =	Audio.o \
+		../src/HiScore.cpp
+OBJECTS =	main.o \
+		Audio.o \
 		ConfigFile.o \
 		HelpPage.o \
 		HiScoreWidget.o \
 		MainWidget.o \
 		PlayList.o \
 		../src/Config.o \
-		../src/HiScore.o \
-		main.o
+		../src/HiScore.o
 INTERFACES =	
 UICDECLS =	
 UICIMPLS =	
@@ -120,6 +120,18 @@ clean:
 
 ####### Compile
 
+main.o: main.cpp \
+		main.h \
+		MainWidget.h \
+		HelpPage.h \
+		PlayList.h \
+		Audio.h \
+		ConfigFile.h \
+		HiScoreWidget.h \
+		../src/Config.h \
+		../src/HiScore.h \
+		icon.xpm
+
 Audio.o: Audio.cpp \
 		Audio.h
 
@@ -156,6 +168,7 @@ PlayList.o: PlayList.cpp \
 		../src/extern.h \
 		../src/HiScore.h \
 		../src/define.h \
+		../src/NCString.h \
 		Audio.h \
 		../src/Ground.h \
 		../src/MenuGL.h \
@@ -182,20 +195,6 @@ PlayList.o: PlayList.cpp \
 		../src/HeroAircraft.h \
 		../src/compatibility.h \
 		../src/ScreenItem.h
-
-main.o: main.cpp \
-		main.h \
-		MainWidget.h \
-		HelpPage.h \
-		PlayList.h \
-		Audio.h \
-		ConfigFile.h \
-		HiScoreWidget.h \
-		../src/Config.h \
-		../src/compatibility.h \
-		../src/HiScore.h \
-		../src/define.h \
-		icon.xpm
 
 moc/moc_ConfigFile.o: moc/moc_ConfigFile.cpp \
 		ConfigFile.h
