@@ -38,14 +38,14 @@ LIBDIRS		= -L../support/glpng/lib -L/usr/lib -L/usr/X11R6/lib -L/usr/local/lib
 LIBS		= $$LIBDIRS $(GL_LIBS) $(AL_LIBS) $(SDL_LIBS) $(SMPEG_LIBS) $(VORBIS_LIBS)
 #LIBS		= $$LIBDIRS $(GL_LIBS) $(AL_LIBS) $(SDL_LIBS) $(SMPEG_LIBS) $(VORBIS_LIBS) -lSDL_mixer
 
-#-- Debug --
-CONFIG		= warn_on debug
-DEFINES 	= _REENTRANT AUDIO_OPENAL OLD_OPENAL CHECK_ERRORS NO_PARACHUTE
-#DEFINES 	= _REENTRANT AUDIO_SDLMIXER CHECK_ERRORS NO_PARACHUTE
-#DEFINES 	= _REENTRANT AUDIO_SDLMIXER AUDIO_OPENAL CHECK_ERRORS NO_PARACHUTE
+##-- Debug --
+#CONFIG		= warn_on debug
+#DEFINES 	= _REENTRANT AUDIO_OPENAL OLD_OPENAL CHECK_ERRORS NO_PARACHUTE
+##DEFINES 	= _REENTRANT AUDIO_SDLMIXER CHECK_ERRORS NO_PARACHUTE
+##DEFINES 	= _REENTRANT AUDIO_SDLMIXER AUDIO_OPENAL CHECK_ERRORS NO_PARACHUTE
 #-- Release --
-#CONFIG		= warn_off release
-#DEFINES 	= OLD_OPENAL AUDIO_OPENAL _REENTRANT 
+CONFIG		= warn_off release
+DEFINES 	= OLD_OPENAL AUDIO_OPENAL _REENTRANT 
 
 ##############################
 ## IRIX
