@@ -1,6 +1,6 @@
 #############################################################################
 # Makefile for building chromium
-# Generated by tmake at 18:49, 2001/05/20
+# Generated by tmake at 22:25, 2001/05/21
 #     Project: CHROMIUM
 #    Template: app
 #############################################################################
@@ -10,8 +10,8 @@ include ../config.mak
 
 CC	=	gcc
 CXX	=	g++
-CFLAGS	=	-pipe $(PKG_CFLAGS) $(AL_CFLAGS) $(SDL_CFLAGS) $(SMPEG_CFLAGS) -Wall -W -g -D_REENTRANT -DAUDIO_OPENAL -DOLD_OPENAL -DCHECK_ERRORS -DNO_PARACHUTE
-CXXFLAGS=	-pipe $(PKG_CFLAGS) $(AL_CFLAGS) $(SDL_CFLAGS) $(SMPEG_CFLAGS) -Wall -W -g -D_REENTRANT -DAUDIO_OPENAL -DOLD_OPENAL -DCHECK_ERRORS -DNO_PARACHUTE
+CFLAGS	=	-pipe $(PKG_CFLAGS) $(AL_CFLAGS) $(SDL_CFLAGS) $(SMPEG_CFLAGS) -O2 -DOLD_OPENAL -DAUDIO_OPENAL -D_REENTRANT
+CXXFLAGS=	-pipe $(PKG_CFLAGS) $(AL_CFLAGS) $(SDL_CFLAGS) $(SMPEG_CFLAGS) -O2 -DOLD_OPENAL -DAUDIO_OPENAL -D_REENTRANT
 INCPATH	=	-I../support/include -I../support/glpng/include -I/usr/X11R6/include
 LINK	=	g++
 LFLAGS	=	
