@@ -1,4 +1,7 @@
 Chromium 0.9.12
+ - added command line option to disable tex border color calls. A few 
+   people were having trouble w/ Chromium falling back to software 
+   rendering w/ some DRI drivers. Maybe this will help?
  - added mouse support to menu. +/- buttons can be clicked on items that
    increment/decrement, else double click activates.
  - music tracks resets to 0 if max is reached
